# citation-compass

./: .env.example  .gitignore  CLAUDE.md  CONTEXTUAL_EXAMPLES.md  DATA_IMPORT_GUIDE.md  EXAMPLE_PAPERS_FOR_EXPLORATION.md  FILE_UPLOAD_GUIDE.md  IMPORT_STANDARDS.md  PERFORMANCE_IMPROVEMENTS.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_4_PLAN.md  PORTFOLIO.md  README.md  README_INTEGRATION_SUMMARY.md  STREAMLIT_README.md  TESTING_INSTRUCTIONS.md  app.py  blog_post_neo4j_health_monitoring.md  demo_datasets_guide.md  docs-requirements.txt  import_progress_20250909_081046.json  import_progress_20250909_114736.json  import_progress_20250909_115310.json  mkdocs-public.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_setup_validation.py  setup_database.py  verify_models.py
.streamlit/: config.toml
data/demo_datasets/complete_demo/: authors.json  citations.json  dataset_info.json  papers.json  venues.json
data/demo_datasets/minimal_demo_5papers/: citations.json  dataset_info.json  papers.json
docs/: README.md  VISUAL_ASSETS_INDEX.md  api.md  architecture.md  getting-started.md  index.md  neo4j-ping-guide.md  overview.md  setup.md
docs-public/: index.md
docs-public/getting-started/: configuration.md  installation.md
docs/api/: models.md  services.md
docs/archive/: CONTEXTUAL_EXAMPLES.md  EXAMPLE_PAPERS_FOR_EXPLORATION.md  IMPORT_STANDARDS.md
docs/assets/: main.html
docs/assets/css/: extra.css
docs/developer-guide/: architecture.md
docs/development/: DATA_IMPORT_GUIDE.md  FILE_UPLOAD_GUIDE.md  STREAMLIT_README.md  TESTING_INSTRUCTIONS.md
docs/getting-started/: configuration.md  demo-mode.md  environment-setup.md  file-upload.md  installation.md  quick-start.md
docs/includes/: mkdocs.md
docs/notebooks/: 01-comprehensive-exploration.md  02-model-training-pipeline.md  03-prediction-evaluation.md  04-narrative-presentation.md  overview.md
docs/overrides/: main.html
docs/resources/: neo4j-health-monitoring.md
docs/user-guide/: data-import.md  demo-datasets.md  interactive-features.md  ml-predictions.md  network-analysis.md  notebook-pipeline.md  overview.md  results-interpretation.md
models/: model_loading_instructions.txt  training_metadata.json
notebooks/: 01_comprehensive_exploration.ipynb  01_network_exploration.ipynb  02_citation_analysis.ipynb  02_model_training_pipeline.ipynb  03_performance_benchmarks.ipynb  03_prediction_evaluation.ipynb  04_narrative_presentation.ipynb  Test Neo4J Ping.ipynb  model_training.ipynb
pages/: Home.py  Overview_And_Training.py
reference-codebases/academic-citation-predictions/: 1-Data-Ingestion.ipynb  2- Enrich Data-.ipynb  CORE_SUMMARY_academic-citation-predictiona.md  citation_graph.ttl  dagnyazu_Neo4j-98d54216-Created-2025-05-29.txt  database-schema.txt  etl_papers_authors.py  helper_func.py  import_citation_db.cypher  neo4j_full_import_script.cypher  neo4j_insights.py  paper_details.csv  paper_details.json  paper_details.pickle  pyproject.toml  step-by-step-instructions.md
reference-codebases/academic-citation-predictions/config/: __init__.py  settings.py
reference-codebases/academic-citation-predictions/src/data_ingestion/: __init__.py  semantic_scholar_api.py
reference-codebases/academic-citation-predictions/src/preprocessing/: data_validation.py
reference-codebases/academic-citation-predictions/transformed/: authors_sample.csv  co_authorships_sample.csv  fields_of_study_sample.csv  paper_fields_sample.csv  paper_venues_sample.csv  paper_years_sample.csv  papers_sample.csv  venues_sample.csv  years_sample.csv
sample_data/: README.md  sample_paper_ids.csv  sample_paper_ids.txt
scripts/: neo4j_ping.py  neo4j_ping.sh  validate_documentation.py  validate_environment.py
src/analytics/: __init__.py  contextual_explanations.py  export_engine.py  network_analysis.py  performance_metrics.py  real_metrics_collector.py  temporal_analysis.py
src/cli/: __init__.py  import_data.py  main.py
src/config/: database.py  settings.py
src/data/: __init__.py  api_config.py  demo_dataset.py  demo_loader.py  fixtures.py  import_pipeline.py  unified_api_client.py  unified_database.py
src/database/: connection.py  ping.py  schema.py
src/models/: __init__.py  api.py  author.py  citation.py  field.py  ml.py  network.py  paper.py  venue.py
src/services/: __init__.py  analytics_service.py  demo_service.py  ml_service.py
src/streamlit_app/: __init__.py
src/streamlit_app/pages/: Data_Import.py  Demo_Datasets.py  Embedding_Explorer.py  Enhanced_Visualizations.py  ML_Predictions.py  Notebook_Pipeline.py  Results_Interpretation.py  __init__.py
src/tests/: test_database_connection.py
src/utils/: logging.py  validation.py
tests/: conftest.py  test_analytics.py  test_fixtures.py  test_integration.py  test_ml_service.py  test_models.py  test_models_simple.py  test_performance_analytics.py  test_unified_api_client.py  test_unified_database.py  test_utils.py  test_validation.py
