[project]
name = "academic-citation-predictions"
version = "0.1.0"
description = "this project develops a PyTorch-based link prediction model using graph embeddings to predict likely citations between papers"
authors = [
    {name = "BHS"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.3)",
    "pandas (>=1.5)",
    "numpy (>=1.22)",
    "pykeen (>=1.10)",
    "networkx (>=3.0)",
    "rdflib (>=6.2)",
    "pyarrow (>=10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
